fix un-aligned text

--- a/develop/css/blocks.css
+++ b/develop/css/blocks.css
@@ -122,6 +122,10 @@
     flex-direction: row;
   }
 
+  .product__features > * {
+    align-items: flex-start;
+  }
+
   .product__features > * > * {
     text-align: start;
   }
